# confgrep

./: .gitignore  README.md  papers.db  setup.cfg
confgrep/: __main__.py  build_db.py  config.py  utils.py
