[metadata]
name = confgrep
version = attr: confgrep.__version__
url = https://github.com/Yiteng-Peng/confgrep
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
license = BSD 2 Clause
license_files = LICENSE
description = A grepping tool for top conferences
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    sqlalchemy >= 1.4
    colorlog

python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
    confgrep = confgrep.__main__:main
